# esp_lsl_ml

./: CMakeLists.txt  partitions.csv
components/esp-tflite-micro/tensorflow/lite/micro/: micro_interpreter.cc  micro_mutable_op_resolver.h
components/esp-tflite-micro/tensorflow/lite/micro/kernels/: concatenation.cc
components/liblsl_esp32/src/: lsl_inlet.h  lsl_tcp_server.c
main/: CMakeLists.txt  EMG_TinyML_LiteRT.tflite  EMG_TinyML_LiteRT_ConcatFix.tflite  EMG_TinyML_LiteRT_layerUnrolled.tflite  EMG_TinyML_float32.tflite  First_EMG_TinyML_LiteRT_ConcatFix.tflite  Kconfig.projbuild  Second_EMG_TinyML_LiteRT_ConcatFix.tflite  idf_component.yml  lsl_handle.cpp  lsl_handle.h  main.cpp  master_handle.cpp  master_handle.h  model.h  model_flash.cpp  model_flash.h
main/MicroInterface/: Model.cpp  Model.h  scaler_params.h
main/data/: imu_5_sample.h
main/models/: conv_lr0.0001_bs32_float16.h  conv_lr0.0001_bs32_float32.h  conv_lr0.0001_bs32_hybrid.h  conv_lr0.0001_bs32_int8.h  conv_lstm_lr0.0001_bs32_float16.h  conv_lstm_lr0.0001_bs32_float32.h  conv_lstm_lr0.0001_bs32_hybrid.h  conv_lstm_lr0.0001_bs32_int8.h  residual_conv_lstm_lr0.0001_bs32_float16.h  residual_conv_lstm_lr0.0001_bs32_float32.h  residual_conv_lstm_lr0.0001_bs32_hybrid.h  residual_conv_lstm_lr0.0001_bs32_int8.h
